static/css/styles.css
/*******************************
 * Root
 * Global Styles
 */

:root {
  --sans: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  --space: 1rem; /* Used for line-height & grid-gap; */
}

@media (min-width: 64rem) {
  :root {
    --space: 1.5rem;
  }
}

*,
*::before,
*::after {
  box-sizing: border-box;
  /*box-shadow: 0 0 3px 0 rgba(255, 0, 255, 0.3);*/
}

html,
body {
  height: 100%;
}

body {
  display: grid;
  grid-template-rows: auto 1fr auto;
	font-family: var(--sans); 
  max-width: 160rem;
  margin: 0 auto;
}

/* Typography */

a {
  color: #000;
}

a:active {
  color: #3c3c3c;
}

a:visited {
  color: #000;
}

article ul li {
  line-height: 1.5;
}

p {
  font-style: normal;
  font-weight: normal;
  font-size: 1rem;
  line-height: 1.5;
  letter-spacing: 0.02rem;
  max-width: 50rem;
}

blockquote {
  margin: 0 6rem;
  padding: 0.5rem 0.5rem 0.5rem 2rem;
  border-left: 0.25rem solid #111;
  background-color: #f4f4f4;
}

h3 {
  line-height: 1;
  margin-bottom: 4rem;
}

h2 {
  font-style: normal;
  font-weight: bold;
  font-size: 3rem;
  line-height: 4rem;
  letter-spacing: -0.01rem;
}

figure {
  padding: 0;
  margin: 2rem 0 1rem 0;
}

figure img {
  width: 100%;
  height: auto;
  vertical-align: middle;
}

figcaption > p {
  margin: 0 0 2rem 0;
  padding: 0;
  font-size: 0.75rem;
  color: #3c3c3c;
}

.list li {
  line-height: 1.5;
}

.list li + li {
  margin-top: 0.5rem;
}

.list-reset {
  list-style-type: none;
  margin: 0;
  padding: 0;
}




/*******************************
 * Header
 */

.header {
  grid-row: 1 / 2;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-gap: var(--space);
  padding: var(--space);
  align-items: start;
  margin-bottom: 6rem;
}

.header__logo {
  grid-column: 1 / 2;
  grid-row: 1 / 2;
  margin: 0;
}

.header__logo a {
  height: 48px;
}

.header__nav {
  grid-column: 4 / 5;
  grid-row: 1 / 2;
}




/*******************************
 * Nav
 */

.nav {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.nav li + li {
  margin-top: 0.25rem; 
}

.nav a {
  font-weight: 600;
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: 0.03rem;
  text-decoration: none;
  color: #000;
}

.nav a.active {
  border-bottom: 0.125rem solid #FF6347;
}




/*******************************
 * Footer
 */
.footer {
  background-color: #FF6347;
  color: #000;
  margin-top: 6rem;
  padding: var(--space) var(--space) 6rem var(--space);
}

@media (min-width: 40rem) {
  .footer {
    grid-row: 3 / 4;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-areas:
      "elsewhere elsewhere elsewhere copyright";
    grid-gap: var(--space);
  }
}

.footer__elsewhere {
  grid-area: elsewhere;
}

.footer__elsewhere h4 {
  margin-top: 1rem;
}

.footer__elsewhere ul li {
  margin: 0.25rem 0;
}

.footer__copyright {
  grid-area: copyright;
}


/*******************************
 * Homepage
 */
.home {
  grid-row: 2 / 3;
  padding: 0 var(--space);
}

.home > section + section {
  margin-top: 3rem;
}


@media (min-width: 40rem) {
  .home {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto auto;
    grid-gap: var(--space);
    grid-template-areas:
      "intro intro"
      "posts links";
  }

  .home > section + section {
    margin-top: 0;
  }
}

@media (min-width: 64rem) {
  .home {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-gap: var(--space);
    grid-template-areas: "intro . posts links";
  }
  
  .home > section + section {
    margin-top: 0;
  }
}

/* About */

.home__intro {
  grid-area: intro;
}

/* Recent Posts */

.home__recent {
  grid-area: posts;
}

.recent__post time {
  font-size: 0.75rem;
  color: #3c3c3c;
  text-transform: uppercase;
}

.recent__post p {
  margin: 0;
}

.recent__post + .recent__post {
  margin-top: 1rem;
}

/* Links */

.home__links {
  grid-area: links;
}

.pin-title {
  font-size:1em;
}

.pin-description {
  /* not being used at the moment */
}

.pin-tag {
  display: none;
}




/*******************************
 * List Page & Posts
 */

.list-page {
  padding: 0 var(--space);
}

@media (min-width: 80rem) {
  .list-page {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-gap: var(--space);
  }
}

.posts {
  grid-column: 2 / 4;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.post {
  border-bottom: 1px solid #ccc;
  padding-bottom: 1rem;
}

.post:last-of-type {
  border-bottom: none;
}

.post + .post {
  margin-top: 8rem;
}

.post h3 {
  margin: 0 0 4rem 0;
}

.post__meta {
  margin-top: 3rem;
  font-size: 0.75rem;
  font-weight: 600;
}

.post__meta a {
  text-decoration: none;
}

.post__meta time {
  text-transform: uppercase;
  color: #777;
}

.post__tags {
  list-style-type: none;
  margin-top: 0.5rem;
  padding: 0;
  display: flex;
}

.post__tags li {
  margin-right: 0.5rem;
  text-transform: uppercase;
  color: #777;
}

.post__tags li a {
  color: #777;
  text-decoration: none;
}

.post__body img {
  width: 100%;
  height: auto;
  vertical-align: middle;
}

.img-caption {
  font-size: 0.75rem;
  color: #3c3c3c;
}

.pagination {
  margin: 1rem 0;
}

.pagination__button {
  display: inline-block;
  margin-right: 0.25rem;
  padding: 0.25rem 0.5rem;
  background-color: none;
  text-decoration: none;
  font-weight: 600;
}

.pagination__button--current {
  border-bottom: 0.125rem solid #FF6347;
}

@media (min-width: 64rem) {
  .pagination {
    grid-column: 2 / 3;
  }
}




/*******************************
 * Single Page
 */

.single-page {
  padding: 0 var(--space);
}

.single-page__content {
  grid-column: 2 / 4;
}

@media (min-width: 64rem) {
  .single-page {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-gap: var(--space);
  }
}

.single-post {
  grid-column: 2 / 4;
}

.single-post h2 {
  margin: 0 0 1rem 0;
}
/* ... */

